@@ -186,121 +186,7 @@ public class libc_v2 {
         }
     }
 
-    /*
-     *     Unsigned Short Ptr emulation
-     *
-     */
-    public static class UShortPtr {
 
-        public int bsize = 2;
-        public char[] memory;
-        public int offset;
-
-        public UShortPtr() {
-        }
-
-        public UShortPtr(int size) {
-            memory = new char[size];
-            offset = 0;
-        }
-
-        public UShortPtr(char[] m) {
-            set(m, 0);
-        }
-
-        public UShortPtr(char[] m, int b) {
-            set(m, b);
-        }
-
-        public UShortPtr(UShortPtr cp, int b) {
-            set(cp.memory, cp.offset + b);
-        }
-
-        public UShortPtr(UShortPtr cp) {
-            set(cp.memory, cp.offset);
-        }
-
-        public UShortPtr(UBytePtr cp) {
-            set(cp.memory, cp.offset);
-        }
-
-        public UShortPtr(UBytePtr cp, int b) {
-            set(cp.memory, cp.offset + b);
-        }
-
-        public void set(char[] m, int b) {
-            memory = m;
-            offset = b;
-        }
-
-        public void set(char[] m) {
-            memory = m;
-            offset = 0;
-        }
-
-        public char read(int index) {
-            return (char) (memory[offset + 1 + index * 2] << 8 | memory[offset + index * 2]);
-        }
-
-        public void write(int index, char value) {
-            memory[offset + index * 2] = (char) (value & 0xFF);
-            memory[offset + index * 2 + 1] = (char) ((value >> 8) & 0xFF);
-        }
-
-    }
-
-    /**
-     * Byte Pointer emulation
-     */
-    
-
-    public static class UByteArray {
-
-        public UByteArray(int size) {
-            memory = new char[size];
-            offset = 0;
-        }
-
-        public UByteArray(char[] m) {
-            set(m, 0);
-        }
-
-        public UByteArray(char[] m, int b) {
-            set(m, b);
-        }
-
-        public UByteArray(UBytePtr cp, int b) {
-            set(cp.memory, cp.offset + b);
-        }
-
-        public UByteArray(UByteArray cp, int b) {
-            set(cp.memory, cp.offset + b);
-        }
-
-        public UByteArray(UByteArray cp) {
-            set(cp.memory, cp.offset);
-        }
-
-        public char read(int offs) {
-            return (char) (memory[offs + offset] & 0xFF);
-        }
-
-        public char read() {
-            return (char) (memory[offset] & 0xFF);
-        }
-
-        public void write(int offs, int value) {
-            memory[offset + offs] = (char) (value & 0xFF);
-        }
-
-        public void set(char[] m, int b) {
-            memory = m;
-            offset = b;
-        }
-
-        public char[] memory;
-        public int offset;
-    }
 
     /**
      * Convert a char array to an unsigned integer
